--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
-
 body{ font-size: medium; color: rgb(255, 255, 255);
     background-color: black;
-    font-family: montserrat;}
+    font-family: 'Merriweather', serif;
+font-family: 'Montserrat', sans-serif;}
 header{ text-align: center;}
 img{ border: 10px, 10px ;}
 h1 h2 h3{font-size: 78px;}
