--- a/index.css
+++ b/index.css
@@ -3,6 +3,6 @@ body{ font-size: medium; color: rgb(255, 255, 255);
     font-family: 'Merriweather', serif;
 font-family: 'Montserrat', sans-serif;}
 header{ text-align: center;}
-img{ border: center;}
+img{ border: 10px, 10px ;}
 h1 h2 h3{font-size: 78px;}
 p{ font-size: 15px;}
